# rp2040-rs

./: Cargo.toml  README.md  deploy.sh
.cargo/: config
assets/: ferris.raw
src/: main.rs  xinput.rs
