[package]
name = "rp2040-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
usb-device= "0.2.9"

panic-halt = "0.2.0"
embedded-time = "0.12.1"
rp2040-boot2 = "0.3.0"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features = ["critical-section-impl", "rt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m-rt = { version = "0.7.3"}
critical-section = "1.1.2"

fugit = "0.3.6"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
st7789 = "0.6"

packed_struct = { version = "0.10", default-features = false }
